--- a/como-participar/index.html
+++ b/como-participar/index.html
@@ -66,7 +66,7 @@ por isso você pode partipar sem mexer em códigos, como designers de UI e UX.</
         sizes="(max-width: 590px) 100vw, 590px"
       />
     </span></li>
-<li>[Detalhes] <a href="https://swapi.co/api/people/?page=2">https://swapi.co/api/people/?page=2</a>
+<li>[Detalhes] <a href="https://swapi.co/api/people/%7Bid%7D">https://swapi.co/api/people/{id}</a>
 <span
       class="gatsby-resp-image-wrapper"
       style="position: relative; display: block; margin-left: auto; margin-right: auto;  max-width: 590px;"
